src/sql_migration/deterministic/converter/grammar/generated/PLSQLProcedureParser.py
# Generated from /Users/lohithreddy/Desktop/APP/converter/grammar/PLSQLProcedure.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PLSQLProcedureParser ( Parser ):

    grammarFileName = "PLSQLProcedure.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "';'", "'('", "')'", "','", 
                     "'..'", "'.'", "':='", "'<<'", "'>>'", "'@'", "'%'" ]

    symbolicNames = [ "<INVALID>", "PROCEDURE", "IS", "AS", "BEGIN", "END", 
                      "EXCEPTION", "WHEN", "THEN", "OTHERS", "NULL_", "IF", 
                      "ELSIF", "ELSE", "FOR", "IN", "LOOP", "GOTO", "COMMIT", 
                      "ROLLBACK", "EXECUTE", "IMMEDIATE", "SELECT", "INSERT", 
                      "UPDATE", "DELETE", "TRUNCATE", "WHILE", "EXIT", "RAISE", 
                      "CASE", "MERGE", "REVERSE", "OPEN", "FETCH", "CLOSE", 
                      "INTO", "RETURN", "SEMI", "LPAREN", "RPAREN", "COMMA", 
                      "DOTDOT", "DOT", "ASSIGN", "LABEL_OPEN", "LABEL_CLOSE", 
                      "AT_SIGN", "PERCENT", "STRING_LITERAL", "NUMBER_LITERAL", 
                      "ID", "OP", "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_procedureDef = 0
    RULE_parameterList = 1
    RULE_parameter = 2
    RULE_paramRest = 3
    RULE_declarationSection = 4
    RULE_varDecl = 5
    RULE_typeRef = 6
    RULE_typeMod = 7
    RULE_beginBlock = 8
    RULE_bodyStatements = 9
    RULE_statement = 10
    RULE_labelStmt = 11
    RULE_commitStmt = 12
    RULE_rollbackStmt = 13
    RULE_nullStmt = 14
    RULE_gotoStmt = 15
    RULE_ifStmt = 16
    RULE_elsifClause = 17
    RULE_elseClause = 18
    RULE_condition = 19
    RULE_condToken = 20
    RULE_forLoopStmt = 21
    RULE_rangeExpr = 22
    RULE_rangeBound = 23
    RULE_rangeBoundToken = 24
    RULE_cursorSql = 25
    RULE_cursorToken = 26
    RULE_whileLoopStmt = 27
    RULE_whileCondition = 28
    RULE_whileCondToken = 29
    RULE_caseStmt = 30
    RULE_caseSelector = 31
    RULE_caseSelectorToken = 32
    RULE_caseWhenBranch = 33
    RULE_caseElseBranch = 34
    RULE_exitStmt = 35
    RULE_raiseStmt = 36
    RULE_returnStmt = 37
    RULE_openStmt = 38
    RULE_fetchStmt = 39
    RULE_closeStmt = 40
    RULE_nestedBeginBlock = 41
    RULE_executeImmediateStmt = 42
    RULE_sqlStatement = 43
    RULE_idStatement = 44
    RULE_dottedName = 45
    RULE_sqlRest = 46
    RULE_sqlToken = 47
    RULE_exceptionBlock = 48
    RULE_whenClause = 49
    RULE_exceptionName = 50
    RULE_identifier = 51

    ruleNames =  [ "procedureDef", "parameterList", "parameter", "paramRest", 
                   "declarationSection", "varDecl", "typeRef", "typeMod", 
                   "beginBlock", "bodyStatements", "statement", "labelStmt", 
                   "commitStmt", "rollbackStmt", "nullStmt", "gotoStmt", 
                   "ifStmt", "elsifClause", "elseClause", "condition", "condToken", 
                   "forLoopStmt", "rangeExpr", "rangeBound", "rangeBoundToken", 
                   "cursorSql", "cursorToken", "whileLoopStmt", "whileCondition", 
                   "whileCondToken", "caseStmt", "caseSelector", "caseSelectorToken", 
                   "caseWhenBranch", "caseElseBranch", "exitStmt", "raiseStmt", 
                   "returnStmt", "openStmt", "fetchStmt", "closeStmt", "nestedBeginBlock", 
                   "executeImmediateStmt", "sqlStatement", "idStatement", 
                   "dottedName", "sqlRest", "sqlToken", "exceptionBlock", 
                   "whenClause", "exceptionName", "identifier" ]

    EOF = Token.EOF
    PROCEDURE=1
    IS=2
    AS=3
    BEGIN=4
    END=5
    EXCEPTION=6
    WHEN=7
    THEN=8
    OTHERS=9
    NULL_=10
    IF=11
    ELSIF=12
    ELSE=13
    FOR=14
    IN=15
    LOOP=16
    GOTO=17
    COMMIT=18
    ROLLBACK=19
    EXECUTE=20
    IMMEDIATE=21
    SELECT=22
    INSERT=23
    UPDATE=24
    DELETE=25
    TRUNCATE=26
    WHILE=27
    EXIT=28
    RAISE=29
    CASE=30
    MERGE=31
    REVERSE=32
    OPEN=33
    FETCH=34
    CLOSE=35
    INTO=36
    RETURN=37
    SEMI=38
    LPAREN=39
    RPAREN=40
    COMMA=41
    DOTDOT=42
    DOT=43
    ASSIGN=44
    LABEL_OPEN=45
    LABEL_CLOSE=46
    AT_SIGN=47
    PERCENT=48
    STRING_LITERAL=49
    NUMBER_LITERAL=50
    ID=51
    OP=52
    WS=53
    LINE_COMMENT=54
    BLOCK_COMMENT=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProcedureDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(PLSQLProcedureParser.PROCEDURE, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLSQLProcedureParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(PLSQLProcedureParser.IdentifierContext,i)


        def beginBlock(self):
            return self.getTypedRuleContext(PLSQLProcedureParser.BeginBlockContext,0)


        def EOF(self):
            return self.getToken(PLSQLProcedureParser.EOF, 0)

        def IS(self):
            return self.getToken(PLSQLProcedureParser.IS, 0)

        def AS(self):
            return self.getToken(PLSQLProcedureParser.AS, 0)

        def parameterList(self):
            return self.getTypedRuleContext(PLSQLProcedureParser.ParameterListContext,0)


        def declarationSection(self):
            return self.getTypedRuleContext(PLSQLProcedureParser.DeclarationSectionContext,0)


        def SEMI(self):
            return self.getToken(PLSQLProcedureParser.SEMI, 0)

        def getRuleIndex(self):
            return PLSQLProcedureParser.RULE_procedureDef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureDef" ):
                return visitor.visitProcedureDef(self)
            else:
                return visitor.visitChildren(self)




    def procedureDef(self):

        localctx = PLSQLProcedureParser.ProcedureDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_procedureDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(PLSQLProcedureParser.PROCEDURE)
            self.state = 105
            self.identifier()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==39:
                self.state = 106
                self.parameterList()


            self.state = 109
            _la = self._input.LA(1)
            if not(_la==2 or _la==3):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2252074691561422) != 0):
                self.state = 110
                self.declarationSection()


            self.state = 113
            self.beginBlock()
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2252074691561422) != 0):
                self.state = 114
                self.identifier()


            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==38:
                self.state = 117
                self.match(PLSQLProcedureParser.SEMI)


            self.state = 120
            self.match(PLSQLProcedureParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(PLSQLProcedureParser.LPAREN, 0)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLSQLProcedureParser.ParameterContext)
            else:
                return self.getTypedRuleContext(PLSQLProcedureParser.ParameterContext,i)


        def RPAREN(self):
            return self.getToken(PLSQLProcedureParser.RPAREN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PLSQLProcedureParser.COMMA)
            else:
                return self.getToken(PLSQLProcedureParser.COMMA, i)

        def getRuleIndex(self):
            return PLSQLProcedureParser.RULE_parameterList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = PLSQLProcedureParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(PLSQLProcedureParser.LPAREN)
            self.state = 123
            self.parameter()
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==41:
                self.state = 124
                self.match(PLSQLProcedureParser.COMMA)
                self.state = 125
                self.parameter()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 131
            self.match(PLSQLProcedureParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(PLSQLProcedureParser.IdentifierContext,0)


        def paramRest(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLSQLProcedureParser.ParamRestContext)
            else:
                return self.getTypedRuleContext(PLSQLProcedureParser.ParamRestContext,i)


        def getRuleIndex(self):
            return PLSQLProcedureParser.RULE_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = PLSQLProcedureParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.identifier()
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 72054295503044606) != 0):
                self.state = 134
                self.paramRest()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamRestContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(PLSQLProcedureParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(PLSQLProcedureParser.RPAREN, 0)

        def getRuleIndex(self):
            return PLSQLProcedureParser.RULE_paramRest

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamRest" ):
                return visitor.visitParamRest(self)
            else:
                return visitor.visitChildren(self)




    def paramRest(self):

        localctx = PLSQLProcedureParser.ParamRestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_paramRest)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            _la = self._input.LA(1)
            if _la <= 0 or _la==40 or _la==41:
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLSQLProcedureParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(PLSQLProcedureParser.VarDeclContext,i)


        def getRuleIndex(self):
            return PLSQLProcedureParser.RULE_declarationSection

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationSection" ):
                return visitor.visitDeclarationSection(self)
            else:
                return visitor.visitChildren(self)




    def declarationSection(self):

        localctx = PLSQLProcedureParser.DeclarationSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declarationSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 142
                self.varDecl()
                self.state = 145 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 2252074691561422) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(PLSQLProcedureParser.IdentifierContext,0)


        def typeRef(self):
            return self.getTypedRuleContext(PLSQLProcedureParser.TypeRefContext,0)


        def SEMI(self):
            return self.getToken(PLSQLProcedureParser.SEMI, 0)

        def typeMod(self):
            return self.getTypedRuleContext(PLSQLProcedureParser.TypeModContext,0)


        def ASSIGN(self):
            return self.getToken(PLSQLProcedureParser.ASSIGN, 0)

        def sqlRest(self):
            return self.getTypedRuleContext(PLSQLProcedureParser.SqlRestContext,0)


        def getRuleIndex(self):
            return PLSQLProcedureParser.RULE_varDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = PLSQLProcedureParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.identifier()
            self.state = 148
            self.typeRef()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==39:
                self.state = 149
                self.typeMod()


            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==44:
                self.state = 152
                self.match(PLSQLProcedureParser.ASSIGN)
                self.state = 153
                self.sqlRest()


            self.state = 156
            self.match(PLSQLProcedureParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeRefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLSQLProcedureParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(PLSQLProcedureParser.IdentifierContext,i)


        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(PLSQLProcedureParser.DOT)
            else:
                return self.getToken(PLSQLProcedureParser.DOT, i)

        def PERCENT(self):
            return self.getToken(PLSQLProcedureParser.PERCENT, 0)

        def getRuleIndex(self):
            return PLSQLProcedureParser.RULE_typeRef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeRef" ):
                return visitor.visitTypeRef(self)
            else:
                return visitor.visitChildren(self)




    def typeRef(self):

        localctx = PLSQLProcedureParser.TypeRefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typeRef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.identifier()
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43:
                self.state = 159
                self.match(PLSQLProcedureParser.DOT)
                self.state = 160
                self.identifier()
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==48:
                self.state = 166
                self.match(PLSQLProcedureParser.PERCENT)
                self.state = 167
                self.identifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeModContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(PLSQLProcedureParser.LPAREN, 0)

        def sqlRest(self):
            return self.getTypedRuleContext(PLSQLProcedureParser.SqlRestContext,0)


        def RPAREN(self):
            return self.getToken(PLSQLProcedureParser.RPAREN, 0)

        def getRuleIndex(self):
            return PLSQLProcedureParser.RULE_typeMod

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeMod" ):
                return visitor.visitTypeMod(self)
            else:
                return visitor.visitChildren(self)




    def typeMod(self):

        localctx = PLSQLProcedureParser.TypeModContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typeMod)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(PLSQLProcedureParser.LPAREN)
            self.state = 171
            self.sqlRest()
            self.state = 172
            self.match(PLSQLProcedureParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BeginBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(PLSQLProcedureParser.BEGIN, 0)

        def bodyStatements(self):
            return self.getTypedRuleContext(PLSQLProcedureParser.BodyStatementsContext,0)


        def END(self):
            return self.getToken(PLSQLProcedureParser.END, 0)

        def exceptionBlock(self):
            return self.getTypedRuleContext(PLSQLProcedureParser.ExceptionBlockContext,0)


        def getRuleIndex(self):
            return PLSQLProcedureParser.RULE_beginBlock

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBeginBlock" ):
                return visitor.visitBeginBlock(self)
            else:
                return visitor.visitChildren(self)




    def beginBlock(self):

        localctx = PLSQLProcedureParser.BeginBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_beginBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(PLSQLProcedureParser.BEGIN)
            self.state = 175
            self.bodyStatements()
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 176
                self.exceptionBlock()


            self.state = 179
            self.match(PLSQLProcedureParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyStatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLSQLProcedureParser.StatementContext)
            else:
                return self.getTypedRuleContext(PLSQLProcedureParser.StatementContext,i)


        def getRuleIndex(self):
            return PLSQLProcedureParser.RULE_bodyStatements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBodyStatements" ):
                return visitor.visitBodyStatements(self)
            else:
                return visitor.visitChildren(self)




    def bodyStatements(self):

        localctx = PLSQLProcedureParser.BodyStatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_bodyStatements)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 181
                    self.statement() 
                self.state = 186
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def labelStmt(self):
            return self.getTypedRuleContext(PLSQLProcedureParser.LabelStmtContext,0)


        def commitStmt(self):
            return self.getTypedRuleContext(PLSQLProcedureParser.CommitStmtContext,0)


        def rollbackStmt(self):
            return self.getTypedRuleContext(PLSQLProcedureParser.RollbackStmtContext,0)


        def nullStmt(self):
            return self.getTypedRuleContext(PLSQLProcedureParser.NullStmtContext,0)


        def gotoStmt(self):
            return self.getTypedRuleContext(PLSQLProcedureParser.GotoStmtContext,0)

